Added eyebrow component, started the email-heading module

--- a/src/modules/email-banner-one-column.html
+++ b/src/modules/email-banner-one-column.html
@@ -1,6 +1,6 @@
 <!--
 	Module: Email-banner-one-column
-	Type: Default
+	Variant: Default
 -->
 <table name="module_logo-banner_default" class="module">
 	<tr class="content">
@@ -12,7 +12,7 @@
 
 <!--
 	Module: Email-banner-one-column
-	Type: Sapphine variant
+	Variant: Sapphine variant
 -->
 <table name="module_logo-banner_default" class="module variant-sapphine">
 	<tr class="content">
@@ -24,7 +24,7 @@
 
 <!--
 	Module: Email-banner-one-column
-	Type: Sage variant
+	Variant: Sage variant
 -->
 <table name="module_logo-banner_default" class="module variant-sage">
 	<tr class="content">
@@ -34,7 +34,7 @@
 
 <!--
 	Module: Email-banner-one-column
-	Type: Onyx variant
+	Variant: Onyx variant
 -->
 <table name="module_logo-banner_default" class="module variant-onyx">
 	<tr class="content">
@@ -44,7 +44,7 @@
 
 <!--
 	Module: Email-banner-one-column
-	Type: Clarity variant
+	Variant: Clarity variant
 -->
 <table name="module_logo-banner_default" class="module variant-clarity">
 	<tr class="content">
@@ -54,7 +54,7 @@
 
 <!--
 	Module: Email-banner-one-column
-	Type: Currency variant
+	Variant: Currency variant
 -->
 <table name="module_logo-banner_default" class="module variant-currency">
 	<tr class="content">
