--- a/src/modules/logo-banner.html
+++ b/src/modules/logo-banner.html
@@ -1,6 +1,6 @@
 <!--
 	Module: logo-banner
-	Type: Default
+	Variant: Default
 -->
 <table name="module_logo-banner_default" class="module">
 	<tr class="content">
@@ -12,7 +12,7 @@
 
 <!--
 	Module: logo-banner
-	Type: Sapphine variant
+	Variant: Sapphine variant
 -->
 <table name="module_logo-banner_default" class="module variant-sapphine">
 	<tr class="content">
@@ -24,7 +24,7 @@
 
 <!--
 	Module: logo-banner
-	Type: Sage variant
+	Variant: Sage variant
 -->
 <table name="module_logo-banner_default" class="module variant-sage">
 	<tr class="content">
@@ -36,7 +36,7 @@
 
 <!--
 	Module: logo-banner
-	Type: Onyx variant
+	Variant: Onyx variant
 -->
 <table name="module_logo-banner_default" class="module variant-onyx">
 	<tr class="content">
@@ -48,7 +48,7 @@
 
 <!--
 	Module: logo-banner
-	Type: Clarity variant
+	Variant: Clarity variant
 -->
 <table name="module_logo-banner_default" class="module variant-clarity">
 	<tr class="content">
@@ -60,7 +60,7 @@
 
 <!--
 	Module: logo-banner
-	Type: Currency variant
+	Variant: Currency variant
 -->
 <table name="module_logo-banner_default" class="module variant-currency">
 	<tr class="content">
