--- a/src/modules/logo-banner/logo-banner.html
+++ b/src/modules/logo-banner/logo-banner.html
@@ -2,10 +2,10 @@
 				Module: logo-banner
 				Variant: Default
 			-->
-			<table class="module @@variant">
+			<table class="module">
 				<tr class="content">
 					<td class="container">
-						<img src="@@img" alt="" width="124px">
+						<img src="/images/LAM_Logo-2024.svg" alt="" width="124px">
 					</td>
 				</tr>
 			</table>
