--- a/src/modules/logo-banner/logo-banner.sage.html
+++ b/src/modules/logo-banner/logo-banner.sage.html
@@ -1,11 +1,11 @@
 			<!--
 				Module: logo-banner
-				Variant: Default
+				Variant: Sage
 			-->
-			<table class="module">
+			<table class="module sage">
 				<tr class="content">
 					<td class="container">
-						<img src="/images/LAM_Logo-2024.svg" alt width="124px">
+						<img src="/images/LAM_Logo-2024.svg" alt="" width="124px">
 					</td>
 				</tr>
 			</table>
