--- a/src/modules/preheader/index.html
+++ b/src/modules/preheader/index.html
@@ -1,7 +1,7 @@
 			<!--
 				Module: Preheader
 			-->
-			<table name="module_preheader" class="module">
+			<table name="module_preheader" class="module @@variant">
 				<tr class="">
 					<td style="display: block; padding: 8px 0 8px 0; text-align: center;">
 						<a href="#">Preheader text will go here</a>
