Finished the email banner two column, the button is no longer a template, womp womp

--- a/src/modules/email-banner-two-column/email-banner-two-column.sage.html
+++ b/src/modules/email-banner-two-column/email-banner-two-column.sage.html
@@ -1,10 +1,10 @@
 			<!--
 				Module: Email-banner-two-column
-				Variant: Default
+				Variant: Sage
 			-->
 			@@include( 'modules/email-banner-two-column/template.html', {
-				"variant": "",
-				"img": "/images/feature-image-1.png",
-				"btnVariant": "sapphire",
+				"variant": "sage",
+				"img": "/images/feature-image-2.png",
+				"btnVariant": "onyx",
 				"btnLabel": "Download"
 			} )
