--- a/src/modules/email-banner-two-column/template.html
+++ b/src/modules/email-banner-two-column/template.html
@@ -6,11 +6,7 @@
 								<td>
 									<h1>Factor Report</h1>
 									<p class="py-20">Monthly analysis of global<br/> market factors</p>
-									@@include('components/buttons/template.html', {
-										"href": "#",
-										"label": "Download",
-										"variant": "@@variant"
-									})
+									<a href="#" class="btn @@btnVariant">@@btnLabel</a>
 								</td>
 							</tr>
 						</table>
