--- a/src/modules/email-banner-two-column/email-banner-two-column.clarity.html
+++ b/src/modules/email-banner-two-column/email-banner-two-column.clarity.html
@@ -1,9 +1,9 @@
 			<!--
 				Module: Email-banner-two-column
-				Variant: Default
+				Variant: Clarity
 			-->
 			@@include( 'modules/email-banner-two-column/template.html', {
-				"variant": "",
+				"variant": "clarity",
 				"img": "/images/feature-image-1.png",
 				"btnVariant": "sapphire",
 				"btnLabel": "Download"
