--- a/src/modules/email-banner-two-column/email-banner-two-column.onyx.html
+++ b/src/modules/email-banner-two-column/email-banner-two-column.onyx.html
@@ -1,10 +1,10 @@
 			<!--
 				Module: Email-banner-two-column
-				Variant: Default
+				Variant: Onyx
 			-->
 			@@include( 'modules/email-banner-two-column/template.html', {
-				"variant": "",
-				"img": "/images/feature-image-1.png",
-				"btnVariant": "sapphire",
+				"variant": "onyx",
+				"img": "/images/feature-image-3.png",
+				"btnVariant": "onyx secondary",
 				"btnLabel": "Download"
 			} )
