--- a/src/modules/email-banner-two-column/email-banner-two-column.sapphire.html
+++ b/src/modules/email-banner-two-column/email-banner-two-column.sapphire.html
@@ -4,5 +4,7 @@
 			-->
 			@@include( 'modules/email-banner-two-column/template.html', {
 				"variant": "sapphire",
-				"img": "/images/feature-image-1.png"
+				"img": "/images/feature-image-1.png",
+				"btnVariant": "sapphire secondary",
+				"btnLabel": "Download"
 			} )
