moved email heading small files up one level to simplify template reference

--- a/src/modules/email-heading/email-heading.small.currency.html
+++ b/src/modules/email-heading/email-heading.small.currency.html
@@ -3,7 +3,7 @@
 				Module: Email-heading
 				Variant: Small Headline, Currency
 			-->
-			@@include('modules/email-heading/small-headline/template.html', {
+			@@include('modules/email-heading/template.small.html', {
 				variant: "currency",
 				eyebrowVariant: "light",
 				btnVariant: "onyx secondary",
