--- a/src/modules/email-heading/email-heading.small.sage.html
+++ b/src/modules/email-heading/email-heading.small.sage.html
@@ -2,7 +2,7 @@
 				Module: Email-heading
 				Variant: Small Headline, Sage
 			-->
-			@@include('modules/email-heading/small-headline/template.html', {
+			@@include('modules/email-heading/template.small.html', {
 				variant: "sage",
 				eyebrowVariant: "",
 				btnVariant: "onyx",
