--- a/src/modules/email-heading/email-heading.small.sapphire.html
+++ b/src/modules/email-heading/email-heading.small.sapphire.html
@@ -2,7 +2,7 @@
 				Module: Email-heading
 				Variant: Small Headline, Sapphire
 			-->
-			@@include('modules/email-heading/small-headline/template.html', {
+			@@include('modules/email-heading/template.small.html', {
 				variant: "sapphire",
 				eyebrowVariant: "light",
 				btnVariant: "sapphire secondary",
