--- a/src/modules/email-heading/email-heading.small.onyx.html
+++ b/src/modules/email-heading/email-heading.small.onyx.html
@@ -2,7 +2,7 @@
 				Module: Email-heading
 				Variant: Small Headline, Onyx
 			-->
-			@@include('modules/email-heading/small-headline/template.html', {
+			@@include('modules/email-heading/template.small.html', {
 				variant: "onyx",
 				eyebrowVariant: "light",
 				btnVariant: "onyx secondary",
