added email heading large headline version and variantes

--- a/src/modules/email-heading/template.small.html
+++ b/src/modules/email-heading/template.small.html
@@ -27,7 +27,7 @@
 									<td>
 										<!--
 											Component: Button
-											Variant: Sapphire
+											Variant: @@btnVariant
 										-->
 										<a href="#" class="btn @@btnVariant">@@btnLabel</a>
 									</td>
