Finished main one column content module

--- a/src/modules/one-column-content/one-column-content.html
+++ b/src/modules/one-column-content/one-column-content.html
@@ -6,5 +6,6 @@
 	variant: "",
 	eyebrowVariant: "",
 	btnVariant: "sapphire",
-	btnLabel: "Primary Button"
+	btnLabel: "Primary Button",
+	img: "/images/one-column-graph.png"
 })
