--- a/src/modules/email-banner-two-column/email-banner-two-column.html
+++ b/src/modules/email-banner-two-column/email-banner-two-column.html
@@ -1,6 +1,6 @@
 <!--
 	Module: Email-banner-two-column
-	Variant: Default
+	Variant: Parchment
 -->
 @@include( 'modules/email-banner-two-column/template.html', {
 	"variant": "",
