--- a/src/modules/email-heading/email-heading.html
+++ b/src/modules/email-heading/email-heading.html
@@ -1,7 +1,7 @@
 
 <!--
 	Module: Email-heading
-	Variant: Large Headline, Default
+	Variant: Large Headline|Parchment
 -->
 @@include('modules/email-heading/template.html', {
 	variant: "",
