--- a/src/modules/email-heading/email-heading.small.html
+++ b/src/modules/email-heading/email-heading.small.html
@@ -1,6 +1,6 @@
 <!--
 	Module: Email-heading
-	Variant: Small Headline, Default
+	Variant: Small Headline|Parchment
 -->
 @@include('modules/email-heading/template.small.html', {
 	variant: "",
