--- a/src/modules/cta-banner/template.html
+++ b/src/modules/cta-banner/template.html
@@ -1,4 +1,4 @@
-<table class="cta-banner module @@variant">
+<table class="cta-banner layout_cta-two-column module @@variant">
 	<tr class="content">
 		<td class="container">
 			<table class="column left">
@@ -10,7 +10,7 @@
 				</tr>
 			</table>
 
-			<table class="column right table-content-right-md">
+			<table class="column right table-content-right">
 				<tbody>
 					<tr>
 						<td>
@@ -19,7 +19,6 @@
 								Variant: @@btnVariant
 							-->
 							<a href="#" class="btn @@btnVariant">@@btnLabel</a>
-							
 						</td>
 					</tr>
 				</tbody>
