--- a/src/modules/one-column-content/one-column-content.html
+++ b/src/modules/one-column-content/one-column-content.html
@@ -1,6 +1,6 @@
 <!--
 	Module: One-column-content
-	Variant: Default
+	Variant: Parchment
 -->
 @@include('modules/one-column-content/template.html', {
 	variant: "",
