--- a/src/modules/email-banner-one-columns/template.html
+++ b/src/modules/email-banner-one-columns/template.html
@@ -1,7 +1,9 @@
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="wrapper @@variant">
-	<tr style class="module">
-		<td class="container framed v-flush">
-			<img src="@@imgSrc" alt="Banner Image" height="140" />
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
+	<tr>
+		<td class="frame left"></td>
+		<td class="content v-flush">
+			<img src="@@imgSrc" alt="Banner Image" width="100%" height="auto" />
 		</td>
+		<td class="frame right"></td>
 	</tr>
 </table>
