--- a/src/modules/email-banner-two-columns/template.html
+++ b/src/modules/email-banner-two-columns/template.html
@@ -1,12 +1,14 @@
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="wrapper @@variant">
-	<tr style class="module">
-		<td class="container framed">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
+	<tr>
+		<td class="frame left"></td>
+		<td class="content">
 			<table style="width: 100%;">
 				<tr class="layout_two-column">
 					<td style="margin-bottom: 16px;" class="column">
 						<h1>Factor Report</h1>
-						<p class="padding-y-20">Monthly analysis of global<br/> market factors</p>
-
+						<br>
+						<p>Monthly analysis of global<br/> market factors</p>
+						<br>
 						<!--[if mso]>
 							<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="15%" stroke="f" 
 								style="height:32px;v-text-anchor:middle;width:209px;" 
@@ -21,10 +23,11 @@
 						<![endif]-->
 					</td>
 					<td class="column">
-						<img src="@@imgBase/@@imgSrc" alt="Banner two column image" width="100%">
+						<img src="@@imgBase/@@imgSrc" alt="Feature image">
 					</td>
 				</tr>
 			</table>
 		</td>
+		<td class="frame right"></td>
 	</tr>
 </table>
