--- a/src/modules/logo-banners/template.html
+++ b/src/modules/logo-banners/template.html
@@ -1,7 +1,9 @@
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="wrapper @@variant">
-	<tr class="module">
-		<td class="container framed">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
+	<tr>
+		<td class="frame left"></td>
+		<td class="content">
 			<img src='@@imgBase/@@imgSrc' alt="LAM Logo" height="36" />
 		</td>
+		<td class="frame right"></td>
 	</tr>
 </table>
