--- a/src/modules/preheaders/template.html
+++ b/src/modules/preheaders/template.html
@@ -1,5 +1,5 @@
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="wrapper @@variant">
-	<tr class="module">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
+	<tr>
 		<td class="d-block center">
 			<p class="paragraph-2">Preheader text will go here</p>
 		</td>
