--- a/src/modules/preheaders/template.link.html
+++ b/src/modules/preheaders/template.link.html
@@ -1,5 +1,5 @@
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="wrapper @@variant">
-	<tr class="module">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
+	<tr>
 		<td class="d-block center">
 			<a href="https://lazard.com/" style class="link-2">Preheader text will go here</a>
 		</td>
