added dark mode scafolding

--- a/src/modules/email-banner-one-columns/template.html
+++ b/src/modules/email-banner-one-columns/template.html
@@ -1,9 +1,9 @@
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
 	<tr>
-		<td class="frame left"></td>
+		<td class="frame"></td>
 		<td class="content v-flush">
 			<img src="@@imgSrc" alt="Banner Image" width="100%" height="auto" />
 		</td>
-		<td class="frame right"></td>
+		<td class="frame"></td>
 	</tr>
 </table>
