--- a/src/modules/email-banner-two-columns/template.html
+++ b/src/modules/email-banner-two-columns/template.html
@@ -1,6 +1,6 @@
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
 	<tr>
-		<td class="frame left"></td>
+		<td class="frame"></td>
 		<td class="content">
 			<table style="width: 100%;">
 				<tr class="layout_two-column">
@@ -10,8 +10,8 @@
 						<p>Monthly analysis of global<br/> market factors</p>
 						<br>
 						<!--[if mso]>
-							<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="15%" stroke="f" 
-								style="height:32px;v-text-anchor:middle;width:209px;" 
+							<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
+								style="height:32px;v-text-anchor:middle;width:98px;" 
 								fillcolor="#00539A">
 								<w:anchorlock/>
 								<center>
@@ -28,6 +28,6 @@
 				</tr>
 			</table>
 		</td>
-		<td class="frame right"></td>
+		<td class="frame"></td>
 	</tr>
 </table>
