--- a/src/modules/logo-banners/template.html
+++ b/src/modules/logo-banners/template.html
@@ -1,9 +1,9 @@
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
 	<tr>
-		<td class="frame left"></td>
+		<td class="frame"></td>
 		<td class="content">
 			<img src='@@imgBase/@@imgSrc' alt="LAM Logo" height="36" />
 		</td>
-		<td class="frame right"></td>
+		<td class="frame"></td>
 	</tr>
 </table>
