added some of the variants back in

--- a/src/modules/email-banner-one-columns/email-banner-one-column.html
+++ b/src/modules/email-banner-one-columns/email-banner-one-column.html
@@ -4,5 +4,5 @@
 -->
 @@include( "modules/email-banner-one-columns/template.html", {
 	variant: "",
-	imgSrc: "https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Banner_Industrial.png"
+	imgSrc: "LAM_Banner_Industrial.png"
 } )
