--- a/src/modules/email-banner-one-columns/template.html
+++ b/src/modules/email-banner-one-columns/template.html
@@ -2,7 +2,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content v-flush">
-			<img src="@@imgSrc" alt="Banner Image" width="100%" height="auto" />
+			<img src="@@imgBase/@@imgSrc" alt="Banner Image" width="100%" height="auto" />
 		</td>
 		<td class="frame"></td>
 	</tr>
