--- a/src/modules/logo-banners/logo-banner.html
+++ b/src/modules/logo-banners/logo-banner.html
@@ -3,5 +3,5 @@
 	Variant: Parchment
 -->
 @@include( "modules/logo-banners/template.html", {
-	imgSrc: "LAM_Logo_Transparent.png.png"
+	imgSrc: "LAM_Logo_Transparent.png"
 } )
