--- a/src/modules/one-column-contents/template.html
+++ b/src/modules/one-column-contents/template.html
@@ -11,7 +11,7 @@
 			<br>
 			<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 			<br>
-			<img src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" />
+			<img style src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" class="mw-100" />
 			<p class="disclaimer">
 				As of 26 October 2023<br/>
 				Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br/>
@@ -66,7 +66,7 @@
 					<w:anchorlock/>
 					<center>
 			<![endif]-->
-			<a target="_blank" href="https://lazard.com/" style class="btn pill sapphire secondary">Sapphire Large Secondary</a>
+			<a target="_blank" href="https://lazard.com/" style class="btn pill sapphire secondary margin-t-8">Sapphire Large Secondary</a>
 			<!--[if mso]>
 					</center>
 				</v:roundrect>
