--- a/src/modules/email-banner-two-columns/email-banner-two-column.html
+++ b/src/modules/email-banner-two-columns/email-banner-two-column.html
@@ -1,3 +1,7 @@
+<!--
+	Module: Email Banner Two Column
+	Variant: Parchment
+-->
 @@include( "modules/email-banner-two-columns/template.html", {
 	imgSrc: "LAM_Feature_Lake.png"
 } )
