Hopefully solving the spacing issue for OL as well as keeping the DW size support

--- a/src/modules/email-banner-two-columns/email-banner-two-column.onyx.html
+++ b/src/modules/email-banner-two-columns/email-banner-two-column.onyx.html
@@ -2,7 +2,7 @@
 	Module: Email Banner Two Column
 	Variant: Parchment
 -->
-@@include( "modules/email-banner-two-columns/template.dark.html", {
+@@include( "modules/email-banner-two-columns/template.dark.onyx.html", {
 	variant: "onyx",
 	imgSrc: "LAM_Feature_Waves.png"
 } )
