--- a/src/modules/email-banner-two-columns/email-banner-two-column.sage.html
+++ b/src/modules/email-banner-two-columns/email-banner-two-column.sage.html
@@ -2,7 +2,7 @@
 	Module: Email Banner Two Column
 	Variant: Parchment
 -->
-@@include( "modules/email-banner-two-columns/template.html", {
+@@include( "modules/email-banner-two-columns/template.onyx.html", {
 	variant: "sage",
 	imgSrc: "LAM_Feature_Blossom.png"
 } )
