--- a/src/modules/email-banner-two-columns/template.dark.onyx.html
+++ b/src/modules/email-banner-two-columns/template.dark.onyx.html
@@ -1,8 +1,4 @@
-<!--
-	Module: Email Banner Two Column
-	Variant: Parchment
--->
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module sage">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark @@variant">
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
@@ -11,23 +7,23 @@
 					<td style="margin-bottom: 16px;" class="column">
 						<h1>Factor Report</h1>
 						<br>
-						<p>Monthly analysis of global<br> market factors</p>
+						<p>Monthly analysis of global<br/> market factors</p>
 						<br>
 						<!--[if mso]>
 							<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-								style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
-								fillcolor="#171A1C">
+								style="height:32px;v-text-anchor:middle;width:98px;" 
+								fillcolor="#FFFFFF">
 								<w:anchorlock/>
 								<center>
 						<![endif]-->
-						<a target="_blank" href="https://lazard.com/" style class="btn pill onyx">Download</a>
+						<a target="_blank" href="https://lazard.com/" style width="98px" class="btn pill onyx secondary">Download</a>
 						<!--[if mso]>
 								</center>
 							</v:roundrect>
 						<![endif]-->
 					</td>
 					<td class="column">
-						<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Feature_Blossom.png" alt="Feature image">
+						<img src="@@imgBase/@@imgSrc" alt="Feature image">
 					</td>
 				</tr>
 			</table>
