--- a/src/modules/email-banner-two-columns/template.onyx.html
+++ b/src/modules/email-banner-two-columns/template.onyx.html
@@ -1,8 +1,4 @@
-<!--
-	Module: Email Banner Two Column
-	Variant: Parchment
--->
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module sage">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
@@ -11,7 +7,7 @@
 					<td style="margin-bottom: 16px;" class="column">
 						<h1>Factor Report</h1>
 						<br>
-						<p>Monthly analysis of global<br> market factors</p>
+						<p>Monthly analysis of global<br/> market factors</p>
 						<br>
 						<!--[if mso]>
 							<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
@@ -27,7 +23,7 @@
 						<![endif]-->
 					</td>
 					<td class="column">
-						<img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_Feature_Blossom.png" alt="Feature image">
+						<img src="@@imgBase/@@imgSrc" alt="Feature image">
 					</td>
 				</tr>
 			</table>
