--- a/src/modules/email-banner-two-columns/template.dark.onyx.html
+++ b/src/modules/email-banner-two-columns/template.dark.onyx.html
@@ -9,18 +9,11 @@
 						<br>
 						<p>Monthly analysis of global<br/> market factors</p>
 						<br>
-						<!--[if mso]>
-							<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-								style="height:32px;v-text-anchor:middle;width:98px;" 
-								fillcolor="#FFFFFF">
-								<w:anchorlock/>
-								<center>
-						<![endif]-->
-						<a target="_blank" href="https://lazard.com/" style width="98px" class="btn pill onyx secondary">Download</a>
-						<!--[if mso]>
-								</center>
-							</v:roundrect>
-						<![endif]-->
+
+						@@include("components/buttons/pills/template.secondary.onyx.html", {
+							label: "Download",
+							width: "98px"
+						})
 					</td>
 					<td class="column">
 						<img src="@@imgBase/@@imgSrc" alt="Feature image">
