--- a/src/modules/email-headings-small/template.dark.onyx.html
+++ b/src/modules/email-headings-small/template.dark.onyx.html
@@ -7,14 +7,14 @@
 					<td>
 						<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
 						<br>
-						<h1>Lazard <br/> Connect</h1>
+						<h3>Geopolitical and market implications of the conflict in the Middle East</h3>
 						<br>
 						<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 					</td>
 					<td>
-						@@include("components/buttons/pills/template.primary.sapphire.html", {
-							label: "Download",
-							width: "98px"
+						@@include("components/buttons/pills/template.secondary.onyx.html", {
+							label: "Visit",
+							width: "65px"
 						})
 					</td>
 				</tr>
