Changed pill buttons to have an MSO dark variant while also keeping them smark for modern email clients

--- a/src/modules/one-column-contents/one-column-content.clarity.html
+++ b/src/modules/one-column-contents/one-column-content.clarity.html
@@ -1,8 +1,8 @@
 <!--
 	Module: One-column-content
-	Variant: Parchment
+	Variant: Clarity
 -->
 @@include( 'modules/one-column-contents/template.html', {
-	variant: "",
-	imgSrc: "LAM_ContentImage_1YGraph.png"
+	variant: "clarity",
+	imgSrc: "LAM_ContentImage_CircleGraph.png"
 } )
