--- a/src/modules/one-column-contents/template.dark.html
+++ b/src/modules/one-column-contents/template.dark.html
@@ -1,4 +1,4 @@
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark @@variant">
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
@@ -12,6 +12,7 @@
 			<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 			<br>
 			<img style src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" class="margin-b-16 mw-100" />
+			<br>
 			<p class="disclaimer">
 				As of 26 October 2023<br/>
 				Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG<br/>
@@ -39,7 +40,7 @@
 				Component: Button
 				Variant: Pill, Primary, Large
 			-->
-			@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+			@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 				label: "Primary Button",
 				width: "128px"
 			})
@@ -49,7 +50,7 @@
 				Component: Button
 				Variant: Pill, Secondary, Large
 			-->
-			@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
+			@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
 				label: "Sapphire Secondary Button",
 				width: "194px"
 			})
