--- a/src/modules/one-column-contents/template.onyx.html
+++ b/src/modules/one-column-contents/template.onyx.html
@@ -39,7 +39,7 @@
 				Component: Button
 				Variant: Pill, Primary, Large
 			-->
-			@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+			@@include("components/buttons/pills/templates/template.primary.onyx.html", {
 				label: "Primary Button",
 				width: "128px"
 			})
@@ -49,8 +49,8 @@
 				Component: Button
 				Variant: Pill, Secondary, Large
 			-->
-			@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
-				label: "Sapphire Secondary Button",
+			@@include("components/buttons/pills/templates/template.secondary.onyx.html", {
+				label: "Onyx Secondary Button",
 				width: "194px"
 			})
 		</td>
