--- a/src/modules/email-headings-small/template.dark.html
+++ b/src/modules/email-headings-small/template.dark.html
@@ -1,4 +1,4 @@
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark @@variant">
 	<tr>
 		<td class="frame"></td>
 		<td class="content alt">
@@ -12,7 +12,7 @@
 						<p style="max-width: 404px;" class="paragraph-2">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
 					</td>
 					<td>
-						@@include("components/buttons/pills/template.secondary.sapphire.html", {
+						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
 							width: "65px"
 						})
