--- a/src/modules/one-column-contents/template.dark.onyx.html
+++ b/src/modules/one-column-contents/template.dark.onyx.html
@@ -1,4 +1,4 @@
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark @@variant">
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
@@ -39,7 +39,7 @@
 				Component: Button
 				Variant: Pill, Primary, Large
 			-->
-			@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+			@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
 				label: "Primary Button",
 				width: "128px"
 			})
@@ -49,8 +49,8 @@
 				Component: Button
 				Variant: Pill, Secondary, Large
 			-->
-			@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
-				label: "Sapphire Secondary Button",
+			@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
+				label: "Onyx Secondary Button",
 				width: "194px"
 			})
 		</td>
