Added table variants and number table

--- a/src/modules/email-banner-two-columns/template.dark.onyx.html
+++ b/src/modules/email-banner-two-columns/template.dark.onyx.html
@@ -10,7 +10,7 @@
 						<p>Monthly analysis of global<br/> market factors</p>
 						<br>
 
-						@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
+						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Download",
 							width: "98px"
 						})
