--- a/src/modules/tables/numbered/template.html
+++ b/src/modules/tables/numbered/template.html
@@ -1,5 +1,5 @@
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
-	<tr>
+	<tr class="bordered">
 		<td class="frame"></td>
 		<td class="content">
 			<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
