--- a/src/modules/tables/thumbnail/template.html
+++ b/src/modules/tables/thumbnail/template.html
@@ -11,7 +11,7 @@
 			<table style="" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
@@ -27,7 +27,7 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
@@ -43,7 +43,7 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
@@ -59,7 +59,7 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
@@ -75,7 +75,7 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
@@ -91,7 +91,7 @@
 				</tr>
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
-						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="">
+						<img src="@@imgBase/LAM_Template_0216_V3_14.png" alt="Table Thumbnail">
 					</td>
 					<td>
 						<h4>Annual Sustainable <br> Investment Report</h4>
