--- a/src/modules/two-column-contents/full-content/template.html
+++ b/src/modules/two-column-contents/full-content/template.html
@@ -2,7 +2,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
-			<table style="width: 100%;">
+			<table style="width: 100%;" cellpadding="8px">
 				<tr class="layout_two-column">
 					<td class="column margin-b-16">
 						<img src="@@imgBase/LAM_ContentImage_Field.png" height="140px" class="margin-b-16" alt="First Column Feature image">
@@ -31,6 +31,7 @@
 								<a href="https://lazard.com">Lazard US Offshore Fund Offerings</a>
 							</li>
 						</ul>
+						<br>
 
 						<h3 class="subheadline">Australia</h3>
 						<br>
@@ -98,6 +99,7 @@
 								<a href="https://lazard.com">Lazard US Offshore Fund Offerings</a>
 							</li>
 						</ul>
+						<br>
 
 						<h3 class="subheadline">Australia</h3>
 						<br>
