--- a/src/modules/one-column-contents/template.dark.html
+++ b/src/modules/one-column-contents/template.dark.html
@@ -11,7 +11,7 @@
 			<br>
 			<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 			<br>
-			<img style src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" class="margin-b-16 mw-100" />
+			<img style src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" class="d-block margin-b-16 mw-100" />
 			<br>
 			<p class="disclaimer">
 				As of 26 October 2023<br/>
@@ -21,20 +21,11 @@
 			<br>
 			<p class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
 			<br>
-			<ul>
-				<li>
-					<a href="#">Outlook on Emerging Markets</a>
-				</li>
-				<li>
-					<a href="#">Outlook on Europe</a>
-				</li>
-				<li>
-					<a href="#">Outlook on Japan</a>
-				</li>
-				<li>
-					<a href="#">Outlook on the United Kingdom</a>
-				</li>
-			</ul>
+			
+			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Emerging Markets</a></p>
+			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Europe</a></p>
+			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Japan</a></p>
+			<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on the United Kingdom</a></p>
 			<br>
 
 			<!--
