Fixes two column contents for OL

--- a/src/modules/one-column-contents/template.dark.html
+++ b/src/modules/one-column-contents/template.dark.html
@@ -11,7 +11,8 @@
 			<br>
 			<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 			<br>
-			<img style src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" class="d-block margin-b-16 mw-100" />
+			<img style src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" class="mw-100" />
+			<p></p> <!-- Spacer <p> for MSO image margin -->
 			<br>
 			<p class="disclaimer">
 				As of 26 October 2023<br/>
