--- a/src/modules/two-column-contents/full-content/template.html
+++ b/src/modules/two-column-contents/full-content/template.html
@@ -20,17 +20,11 @@
 						<h3 class="subheadline">Tuesday, October 31, 1:00PM eT</h3>
 						<br>
 						<p style="width: 193px;" class="d-block paragraph-2">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
-						<ul>
-							<li>
-								<a href="https://lazard.com">Lazard US Offshore Fund Offerings</a>
-							</li>
-							<li>
-								<a href="https://lazard.com">Lazard US Offshore Fund Offerings</a>
-							</li>
-							<li>
-								<a href="https://lazard.com">Lazard US Offshore Fund Offerings</a>
-							</li>
-						</ul>
+						<br>
+
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
 						<br>
 
 						<h3 class="subheadline">Australia</h3>
@@ -88,17 +82,11 @@
 						<h3 class="subheadline">Tuesday, October 31, 1:00PM eT</h3>
 						<br>
 						<p style="width: 193px;" class="d-block paragraph-2">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
-						<ul>
-							<li>
-								<a href="https://lazard.com">Lazard US Offshore Fund Offerings</a>
-							</li>
-							<li>
-								<a href="https://lazard.com">Lazard US Offshore Fund Offerings</a>
-							</li>
-							<li>
-								<a href="https://lazard.com">Lazard US Offshore Fund Offerings</a>
-							</li>
-						</ul>
+						<br>
+
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
 						<br>
 
 						<h3 class="subheadline">Australia</h3>
