--- a/src/modules/two-column-contents/image-left/template.html
+++ b/src/modules/two-column-contents/image-left/template.html
@@ -2,12 +2,14 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
-			<table style="width: 100%;" cellpadding="8px">
+			<table style="width: 100%;">
 				<tr class="layout_two-column">
-					<td class="column">
+					<td class="column padding-r-16">
 						<h3 class="subheadline">Emerging Markets Investment Grade Yields</h3>
 						<br>
-						<img style src="@@imgBase/@@imgSrc" alt="Second Column Image" class="margin-b-16">
+						<img style src="@@imgBase/@@imgSrc" alt="Second Column Image" class="">
+						<p></p> <!-- Spacer <p> for MSO image margin -->
+						<br>
 						<p class="disclosure">
 							As of 26 October 2023 <br>
 							Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG <br>
@@ -21,12 +23,10 @@
 						<br>
 						<p class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
 						<br>
-						<ul>
-							<li>
-								<a href="https://lazard.com">Lazard US Offshore Fund Offerings</a>
-							</li>
-						</ul>
+						
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Lazard US Offshore Fund Offerings</a></p>
 						<br>
+
 						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
 							label: "Primary",
 							width: "98px"
