--- a/src/modules/two-column-contents/speaker/template.html
+++ b/src/modules/two-column-contents/speaker/template.html
@@ -2,10 +2,10 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
-			<table style="width: 100%;" cellpadding="4px">
+			<table style="width: 100%;">
 				<tr class="layout_mobile-one-column">
-					<td style="" class="column margin-b-16">
-						<img style src="@@imgBase/@@imgSrc" alt="Speaker thumbnail" class="padding-r-16">
+					<td style="" class="column margin-b-16 padding-r-16">
+						<img style src="@@imgBase/@@imgSrc" alt="Speaker thumbnail">
 					</td>
 					<td class="column">
 						<h3>@@name</h3>
