--- a/src/modules/two-column-contents/title-left/template.html
+++ b/src/modules/two-column-contents/title-left/template.html
@@ -4,13 +4,15 @@
 		<td class="content">
 			<table style="width: 100%;" cellpadding="4px">
 				<tr class="layout_mobile-one-column">
-					<td style="" class="column margin-b-16">
-						<h3>Back on Track?</h3>
+					<td style="width: 104px" class="column margin-b-16">
+						<h3 class="">Back on Track?</h3>
 					</td>
 					<td class="column">
 						<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
 						<br>
 						<img style src="@@imgBase/@@imgSrc" alt="Feature Image" width="400" class="margin-b-16">
+						<p></p> <!-- Spacer <p> for MSO image margin -->
+						<br>
 						<p class="disclaimer">
 							As of 26 October 2023 <br>
 							Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG <br>
@@ -19,26 +21,17 @@
 						<br>
 						<p style="width: 390px;" class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
 						<br>
-						<ul>
-							<li>
-								<a href="#">Outlook on Emerging Markets</a>
-							</li>
-							<li>
-								<a href="#">Outlook on Europe</a>
-							</li>
-							<li>
-								<a href="#">Outlook on Japan</a>
-							</li>
-							<li>
-								<a href="#">Outlook on the United Kingdom</a>
-							</li>
-						</ul>
+						
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Emerging Markets</a></p>
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Europe</a></p>
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on Japan</a></p>
+						<p style class="list-item"><span class="bullet">&bull;</span>&nbsp; <a href="https://lazard.com" class="link-2">Outlook on the United Kingdom</a></p>
 						<br>
 						<!--
 							Component: Button
 							Variant: Pill, Primary, Large
 						-->
-						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
+						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
 							label: "Primary Button",
 							width: "108px"
 						})
@@ -48,7 +41,7 @@
 							Component: Button
 							Variant: Pill, Secondary, Large
 						-->
-						@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
+						@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
 							label: "Sapphire Secondary Button",
 							width: "164px"
 						})
