Added thumbnail grid module

--- a/src/modules/two-column-contents/image-right/template.html
+++ b/src/modules/two-column-contents/image-right/template.html
@@ -25,7 +25,7 @@
 						<img style src="@@imgBase/@@imgSrc" alt="Second Column Image" class="">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
-						<p class="disclosure">
+						<p class="caption">
 							As of 26 October 2023 <br>
 							Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG <br>
 							Source: Lazard, JP Morgan
