--- a/src/modules/two-column-contents/strategy-card/template.html
+++ b/src/modules/two-column-contents/strategy-card/template.html
@@ -4,8 +4,13 @@
 		<td class="content">
 			<table style="width: 100%;">
 				<tr class="layout_two-column">
-					<td style class="column margin-b-16 padding-r-16 align-right-md">
-						<img src="@@imgBase/@@imgSrc" alt="Strategy thumbnail">
+					<!--[if mso]>
+					<td style align="right" class="column margin-b-16">
+					<![endif]-->
+					<!--[if !mso]><!-->
+					<td style class="column margin-b-16 align-right-md">
+					<!--<![endif]-->
+						<img style src="@@imgBase/@@imgSrc" alt="Strategy thumbnail" class="padding-r-16">
 					</td>
 					<td style="vertical-align: middle; width: 195px;" class="column">
 						<p class="paragraph-3">
