--- a/src/modules/email-banner/two-column/email-banner-two-column.clarity.html
+++ b/src/modules/email-banner/two-column/email-banner-two-column.clarity.html
@@ -2,7 +2,7 @@
 	Module: Email Banner Two Column
 	Variant: Parchment
 -->
-@@include( "modules/email-banner-two-columns/template.dark.html", {
-	variant: "sapphire",
+@@include( "modules/email-banner/two-column/template.html", {
+	variant: "clarity",
 	imgSrc: "LAM_Feature_Lake.png"
 } )
