--- a/src/modules/email-banner/two-column/email-banner-two-column.currency.html
+++ b/src/modules/email-banner/two-column/email-banner-two-column.currency.html
@@ -2,7 +2,7 @@
 	Module: Email Banner Two Column
 	Variant: Parchment
 -->
-@@include( "modules/email-banner-two-columns/template.dark.onyx.html", {
-	variant: "onyx",
+@@include( "modules/email-banner/two-column/template.dark.onyx.html", {
+	variant: "currency",
 	imgSrc: "LAM_Feature_Waves.png"
 } )
