--- a/src/modules/footer-disclaimer/two-column/template.html
+++ b/src/modules/footer-disclaimer/two-column/template.html
@@ -6,11 +6,11 @@
 				<tr class="layout_mobile-one-column">
 					<td style="" class="column margin-b-16 padding-r-16 nowrap">
 						<a href="https://www.linkedin.com/company/lazard/" style="text-decoration: none;">
-							<img src="../../images/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
+							<img src="@@imgBase/linkedin_icon.png" alt="LinkedIn Logo" width="16px" height="16px">
 						</a>
 						&nbsp;&nbsp;
 						<a href="https://www.youtube.com/channel/UC5kvy5orZCGN55qOvoGk7ug" style="text-decoration: none;">
-							<img src="../../images/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
+							<img src="@@imgBase/yt_icon.png" alt="YouTube Logo" width="16px" height="16px">
 						</a>
 					</td>
 					<td class="column">
