--- a/src/modules/three-column-contents/three-thumbnail/template.html
+++ b/src/modules/three-column-contents/three-thumbnail/template.html
@@ -4,8 +4,7 @@
 		<td class="content">
 			<table style="width: 100%;" cellpadding="8px">
 				<tr class="layout_four-column layout_mobile-one-column">
-					<td style="" class="column">
-					</td>
+					<td width="124" style="font-size:1px;line-height:21px;" class="column">&nbsp;</td>
 					<td class="column">
 						<img style src="@@imgBase/@@imgSrc" width="124px" alt="Column Image" class="">
 						<p></p>
