Color variants for thumbnails and full content two cols

--- a/src/modules/three-column-contents/speaker/template.html
+++ b/src/modules/three-column-contents/speaker/template.html
@@ -10,9 +10,9 @@
 						<p class="paragraph-2">The latest market commentary from our thought leaders.</p>
 					</td>
 					<td class="column">
-						<img style src="@@imgBase/@@imgSrc" width="100%" alt="Bio Image">
+						<img style src="@@imgBase/@@imgSrc" width="124" alt="Bio Image">
 					</td>
-					<td colspan="2">
+					<td colspan="2" width="248">
 						<h3>@@name</h3>
 						<br>
 						<h3 class="subheadline">Director, Head of US Offshore and Latin America Distribution</h3>
