--- a/src/modules/three-column-contents/three-thumbnail/template.html
+++ b/src/modules/three-column-contents/three-thumbnail/template.html
@@ -6,8 +6,8 @@
 				<tr class="layout_four-column layout_mobile-one-column">
 					<td width="124" style="font-size:1px;line-height:21px;" class="column">&nbsp;</td>
 					<td class="column">
-						<img style src="@@imgBase/@@imgSrc" width="124px" alt="Column Image" class="">
-						<p></p>
+						<img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class="">
+						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 						@@include("components/buttons/text/template.html", {
@@ -17,8 +17,8 @@
 						})
 					</td>
 					<td class="column">
-						<img style src="@@imgBase/@@imgSrc" width="124px" alt="Column Image" class="">
-						<p></p>
+						<img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class="">
+						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 						@@include("components/buttons/text/template.html", {
@@ -28,8 +28,8 @@
 						})
 					</td>
 					<td class="column">
-						<img style src="@@imgBase/@@imgSrc" width="124px" alt="Column Image" class="">
-						<p></p>
+						<img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class="">
+						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 						@@include("components/buttons/text/template.html", {
