--- a/src/modules/three-column-contents/thumbnail/template.html
+++ b/src/modules/three-column-contents/thumbnail/template.html
@@ -6,7 +6,7 @@
 				<tr class="layout_four-column">
 					<td colspan="2">
 						<img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="100%">
-						<p></p>
+						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 						<br>
@@ -18,8 +18,8 @@
 					</td>
 					<!-- <td></td> -->
 					<td class="column">
-						<img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="100%">
-						<p></p>
+						<img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="124">
+						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 						<br>
@@ -30,8 +30,8 @@
 						})
 					</td>
 					<td class="column">
-						<img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="100%">
-						<p></p>
+						<img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="124">
+						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 						<br>
