--- a/src/modules/thumbnail-grid/template.onyx.html
+++ b/src/modules/thumbnail-grid/template.onyx.html
@@ -15,7 +15,7 @@
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 						<br>
 
-						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+						@@include("components/buttons/pills/templates/template.primary.onyx.html", {
 							label: "Visit",
 							width: "65px"
 						})
@@ -29,7 +29,7 @@
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 						<br>
 
-						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+						@@include("components/buttons/pills/templates/template.primary.onyx.html", {
 							label: "Visit",
 							width: "65px"
 						})
@@ -45,7 +45,7 @@
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 						<br>
 
-						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+						@@include("components/buttons/pills/templates/template.primary.onyx.html", {
 							label: "Visit",
 							width: "65px"
 						})
@@ -59,7 +59,7 @@
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 						<br>
 
-						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+						@@include("components/buttons/pills/templates/template.primary.onyx.html", {
 							label: "Visit",
 							width: "65px"
 						})
