--- a/src/modules/thumbnail-grid/thumbnail-grid.clarity.html
+++ b/src/modules/thumbnail-grid/thumbnail-grid.clarity.html
@@ -1,8 +1,8 @@
 <!--
 	Module: Thumbnail Grid
-	Variant: Parchment
+	Variant: Clarity
 -->
 @@include( "modules/thumbnail-grid/template.html", {
-	variant: "",
+	variant: "clarity",
 	imgSrc: "LAM_ContentImage_Lecture.png"
 } )
