--- a/src/modules/four-column-contents/template.html
+++ b/src/modules/four-column-contents/template.html
@@ -7,29 +7,29 @@
 			<table style="width: 100%;" cellpadding="8px">
 				<tr class="layout_four-column">
 					<td style="" class="column">
-						<img style src="@@imgBase/@@imgSrc" width="100%" alt="First Column Image" class="">
-						<p></p>
+						<img src="@@imgBase/@@imgSrc" width="124" alt="First Column Image">
+						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3 margin-b-8 sapphire">US Outlook</p>
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 					</td>
 					<td class="column">
-						<img style src="@@imgBase/@@imgSrc" width="100%" alt="Second Column Image" class="">
-						<p></p>
+						<img src="@@imgBase/@@imgSrc" width="124" alt="Second Column Image">
+						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3 margin-b-8 sapphire">Japan Outlook</p>
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 					</td>
 					<td class="column">
-						<img style src="@@imgBase/@@imgSrc" width="100%" alt="Third Column Image" class="">
-						<p></p>
+						<img src="@@imgBase/@@imgSrc" width="124" alt="Third Column Image">
+						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3 margin-b-8 sapphire">UK Outlook</p>
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 					</td>
 					<td class="column">
-						<img style src="@@imgBase/@@imgSrc" width="100%" alt="Fourth Column Image" class="">
-						<p></p>
+						<img src="@@imgBase/@@imgSrc" width="124" alt="Fourth Column Image">
+						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<p class="paragraph-3 margin-b-8 sapphire">EM Outlook</p>
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
