--- a/src/modules/thumbnail-grid/template.dark.html
+++ b/src/modules/thumbnail-grid/template.dark.html
@@ -1,4 +1,4 @@
-<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
+<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module dark @@variant">
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
@@ -15,7 +15,7 @@
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 						<br>
 
-						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
 							width: "65px"
 						})
@@ -29,7 +29,7 @@
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 						<br>
 
-						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
 							width: "65px"
 						})
@@ -45,7 +45,7 @@
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 						<br>
 
-						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
 							width: "65px"
 						})
@@ -59,7 +59,7 @@
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 						<br>
 
-						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
 							width: "65px"
 						})
