--- a/src/modules/thumbnail-grid/template.html
+++ b/src/modules/thumbnail-grid/template.html
@@ -5,9 +5,9 @@
 			<h4 class="center">Subscribe to Our Flagship Insights</h4>
 			<br>
 			<table style="width: 100%;" cellpadding="8px">
-				<tr class="layout_two-column margin-b-16">
-					<td style="" class="column margin-b-16">
-						<img src="@@imgBase/@@imgSrc" alt="Feature image" width="255">
+				<tr class="layout_two-column">
+					<td style="" class="column">
+						<img src="@@imgBase/@@imgSrc" alt="Feature image">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<h3>Emerging Markets</h3>
@@ -21,7 +21,7 @@
 						})
 					</td>
 					<td class="column">
-						<img src="@@imgBase/@@imgSrc" alt="Feature image" width="255">
+						<img src="@@imgBase/@@imgSrc" alt="Feature image">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<h3>Emerging Markets</h3>
@@ -36,8 +36,8 @@
 					</td>
 				</tr>
 				<tr class="layout_two-column">
-					<td style="" class="column margin-b-16">
-						<img src="@@imgBase/@@imgSrc" alt="Feature image" width="255">
+					<td style="" class="column">
+						<img src="@@imgBase/@@imgSrc" alt="Feature image">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<h3>Emerging Markets</h3>
@@ -51,7 +51,7 @@
 						})
 					</td>
 					<td class="column">
-						<img src="@@imgBase/@@imgSrc" alt="Feature image" width="255">
+						<img src="@@imgBase/@@imgSrc" alt="Feature image">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
 						<br>
 						<h3>Emerging Markets</h3>
