--- a/src/modules/cta-banner/two-column/cta-banner.sapphire.html
+++ b/src/modules/cta-banner/two-column/cta-banner.sapphire.html
@@ -1,3 +1,5 @@
-@@include( "modules/cta-banner/two-column/template.dark.html", {
-	variant: "sapphire"
+@@include( "modules/cta-banner/two-column/templates/template.dark.html", {
+	variant: "sapphire",
+	heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
+	paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 } )
