started adding emerging market email template, shifting to refactoring master template

--- a/src/modules/cta-banner/one-column/one-column-cta-banners.html
+++ b/src/modules/cta-banner/one-column/one-column-cta-banners.html
@@ -1,13 +1,13 @@
-<!-- ---------- CTA Banner Modules, Two Column, H2 Headline ---------- -->
+<!-- ---------- CTA Banner Modules, One Column, H2 Headline ---------- -->
 <tr>
 	<td align="center">
-		<h4>CTA Banner Modules, Two Column, H2 Headline</h4>
+		<h4>CTA Banner Modules, One Column, H2 Headline</h4>
 	</td>
 </tr>
 
 <tr>
 	<td align="center">
-		@@include( "modules/cta-banner/two-column/templates/template.html", {
+		@@include( "modules/cta-banner/one-column/templates/template.html", {
 			variant: "clarity",
 			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
@@ -17,7 +17,7 @@
 
 <tr>
 	<td align="center">
-		@@include( "modules/cta-banner/two-column/templates/template.onyx.html", {
+		@@include( "modules/cta-banner/one-column/templates/template.onyx.html", {
 			variant: "sage",
 			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
@@ -27,7 +27,7 @@
 
 <tr>
 	<td align="center">
-		@@include( "modules/cta-banner/two-column/templates/template.dark.html", {
+		@@include( "modules/cta-banner/one-column/templates/template.dark.html", {
 			variant: "sapphire",
 			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
@@ -37,25 +37,25 @@
 
 <tr>
 	<td align="center">
-		@@include( "modules/cta-banner/two-column/templates/template.dark.onyx.html", {
+		@@include( "modules/cta-banner/one-column/templates/template.dark.onyx.html", {
 			variant: "currency",
 			heading: "<h2>Explore a New Perspective on AI from Our Team</h2>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
-<!-- ---------- END CTA Banner Modules, Two Column, H2 Headline ---------- -->
+<!-- ---------- END CTA Banner Modules, One Column, H2 Headline ---------- -->
 
-<!-- ---------- CTA Banner Modules, Two Column, H3 Headline ---------- -->
+<!-- ---------- CTA Banner Modules, One Column, H3 Headline ---------- -->
 <tr>
 	<td align="center">
-		<h4>CTA Banner Modules, Two Column, H3 Headline</h4>
+		<h4>CTA Banner Modules, One Column, H3 Headline</h4>
 	</td>
 </tr>
 
 <tr>
 	<td align="center">
-		@@include( "modules/cta-banner/two-column/templates/template.html", {
+		@@include( "modules/cta-banner/one-column/templates/template.html", {
 			variant: "clarity",
 			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
@@ -65,7 +65,7 @@
 
 <tr>
 	<td align="center">
-		@@include( "modules/cta-banner/two-column/templates/template.onyx.html", {
+		@@include( "modules/cta-banner/one-column/templates/template.onyx.html", {
 			variant: "sage",
 			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
@@ -75,7 +75,7 @@
 
 <tr>
 	<td align="center">
-		@@include( "modules/cta-banner/two-column/templates/template.dark.html", {
+		@@include( "modules/cta-banner/one-column/templates/template.dark.html", {
 			variant: "sapphire",
 			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
@@ -85,11 +85,11 @@
 
 <tr>
 	<td align="center">
-		@@include( "modules/cta-banner/two-column/templates/template.dark.onyx.html", {
+		@@include( "modules/cta-banner/one-column/templates/template.dark.onyx.html", {
 			variant: "currency",
 			heading: "<h3>Explore a New Perspective on AI from Our Team</h3>",
 			paragraph: "<p class='paragraph-2'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 		} )
 	</td>
 </tr>
-<!-- ---------- END CTA Banner Modules, Two Column, H3 Headline ---------- -->
+<!-- ---------- END CTA Banner Modules, One Column, H3 Headline ---------- -->
