refactored some modules

--- a/src/modules/cta-banner/two-column/two-column-cta-banners.html
+++ b/src/modules/cta-banner/two-column/two-column-cta-banners.html
@@ -1,10 +1,10 @@
-<!-- ---------- CTA Banner Modules, Two Column, H2 Headline ---------- -->
 <tr>
 	<td align="center">
-		<h4>CTA Banner Modules, Two Column, H2 Headline</h4>
+		<h4 style="margin: 16px;">CTA Banner Modules, Two Column, H2 Headline</h4>
 	</td>
 </tr>
 
+<!-- ---------- CTA Banner Modules, Two Column, H2 Headline ---------- -->
 <tr>
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.html", {
@@ -46,13 +46,13 @@
 </tr>
 <!-- ---------- END CTA Banner Modules, Two Column, H2 Headline ---------- -->
 
-<!-- ---------- CTA Banner Modules, Two Column, H3 Headline ---------- -->
 <tr>
 	<td align="center">
-		<h4>CTA Banner Modules, Two Column, H3 Headline</h4>
+		<h4 style="margin: 16px;">CTA Banner Modules, Two Column, H3 Headline</h4>
 	</td>
 </tr>
 
+<!-- ---------- CTA Banner Modules, Two Column, H3 Headline ---------- -->
 <tr>
 	<td align="center">
 		@@include( "modules/cta-banner/two-column/templates/template.html", {
