Variants and refactoring, done, now for the final compositions and bug fixing

--- a/src/modules/footer-disclaimer/two-column/two-column-footer-disclaimer.html
+++ b/src/modules/footer-disclaimer/two-column/two-column-footer-disclaimer.html
@@ -1,7 +1,7 @@
-<!--
-	Module: Two Column Footer Disclaimer
-	Variant: Onyx
--->
-@@include( "modules/footer-disclaimer/two-column/template.html", {
-	variant: "onyx"
-} )
+<tr>
+	<td align="center">
+		@@include( "modules/footer-disclaimer/two-column/templates/template.html", {
+			variant: "onyx"
+		} )
+	</td>
+</tr>
